# Moving-Hello-World

./: CMakeLists.txt  LICENSE  Makefile  README.md  file_size_calculator.c  hello_world.c
autotools_hello_world/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  file_size_calculator.h  hello_world
autotools_hello_world/.deps/: hello_world-file_size_calculator.Po  hello_world-hello_world.Po
autotools_hello_world/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
hello_world/: CMakeCache.txt  Makefile  MovingHelloWorld  cmake_install.cmake
